UX-fix(Documets#show): do not set documet header as fixed on mobile devices

--- a/app/assets/stylesheets/las.scss
+++ b/app/assets/stylesheets/las.scss
@@ -53,6 +53,13 @@
   }
 }
 
+@media (max-width: 768px) {
+  .documents .doc-head-info {
+    position: relative !important;
+  }
+}
+
+
 li.address-item {
   white-space: nowrap;
 }
